--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="9n7h6n8832VmQ8PZplAWlT3l2HzLwGvRu8U-9a19HHs" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Audi Manuals - Unlock Your Car’s Potential</title>
